--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,11 +26,10 @@ if (flutterVersionName == null) {
 android {
     namespace = "br.edu.materdei.gerenciador_tarefas_si7"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     defaultConfig {
